--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ Throughout all versions
 - pin the Favorites dialog so that it is easier to manage Favorites in bulk
 - pin the Feeds tab in the Configuration dialog
 - add Feed Title input above each Feed URL
+- fix Downloading list so that it shows rows instead of just the feed headers
 
 0.1.3
 - add debug console to web UI
