--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ https://code.google.com/p/torrentwatch-x/ 0.8.9 -> https://github.com/dchang0/to
 - replaced Paypal donation account
 - replaced all references to torrentwatch and TorrentWatch-X with torrentwatch-xa
 - rearranged paths to separate web UI from backend and put files in traditional Debian 7 paths, making it easier for future .deb packaging
-- fixed Issues 238, 244: "no torrent found at URL" (at least for ezRSS)
+- renamed basedir to webdir since it is now just for the web UI portion of torrentwatch-xa
+- fixed TorrentWatch-X Issues 238, 244: "no torrent found at URL" (at least for the default ezRSS feed)
 - added anime-style episode guessing, treating all episodes as part of season 1
 - fixed failure to match TV-style episodes introduced by anime-style episode guessing
