--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,5 @@
-https://code.google.com/p/torrentwatch-x/ 0.8.9 -> https://github.com/dchang0/torrentwatch-xa 0.1
-
 0.1.0
-- cloned torrentwatch-xa to GitHub
+- cloned from TorrentWatch-X 0.8.9 (https://code.google.com/p/torrentwatch-x/) to torrentwatch-xa 0.1.0 (https://github.com/dchang0/torrentwatch-xa/)
 - replaced Paypal donation account
 - replaced all references to torrentwatch and TorrentWatch-X with torrentwatch-xa
 - rearranged paths to separate web UI from backend and put files in traditional Debian 7 paths, making it easier for future .deb packaging
