--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,14 @@
 - cloned from TorrentWatch-X 0.8.9 (https://code.google.com/p/torrentwatch-x/) to torrentwatch-xa 0.1.0 (https://github.com/dchang0/torrentwatch-xa/)
 - replaced Paypal donation account
 - replaced all references to torrentwatch and TorrentWatch-X with torrentwatch-xa
-- rearranged paths to separate web UI from backend and put files in traditional Debian 7 paths, making it easier for future .deb packaging
-- renamed basedir to webdir since it is now just for the web UI portion of torrentwatch-xa
+- split basedir into baseDir and webDir in order to put files in traditional Debian 7 paths, making it easier for future .deb packaging
+- renamed configDir to configCacheDir because the config held there is dynamic
 - fixed TorrentWatch-X Issues 238, 244: "no torrent found at URL" (at least for the default ezRSS feed)
 - added anime-style episode guessing, treating all episodes as part of season 1
 - fixed failure to match TV-style episodes introduced by anime-style episode guessing
 - added new default anime feeds: nyaa.se and tokyotosho.info
+
+- replaced some quickie php tags like <?php echo key; ?> with proper full <?php print([HTML code]) ?> in global_config.tpl, favorites.tpl, and favorites_info.tpl
+- changed Filter input field from type="text" to type="search" to gain Esc key functionality and removed old magnifying glass icon via CSS
+- cleaned up typos discovered by IDE in several files
+- add alt attributes to img tags
