--- a/TODO
+++ b/TODO
@@ -11,8 +11,9 @@ Throughout all versions
 - pin the Favorites dialog so that it is easier to manage Favorites in bulk
 - pin the Feeds tab in the Configuration dialog
 - add Feed Title input above each Feed URL
-- fix Downloading list so that it shows rows instead of just the feed headers
-- fix the filterBar so that it wraps properly when screen is narrow (responsive design)
+- Downloading and Downloaded filters are redundant with each other due to progress bar--combine into one filter called Downloads
+- Transmission filter is redundant with Transmission modal window and Downloading and Downloaded--remove Transmission filter
+- fix the filterBar so that it wraps properly when screen is narrow (responsive design, may not be necessary with removal of filters)
 
 0.1.3
 - add debug console to web UI
