--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,12 +7,13 @@ Functional changes
     This is a BIG change; the split will probably break a lot of things that will be fixed over time.
     Splitting it up also required hardcoding paths in several places due to the poor use of libraries. These will be fixed soon for sure.
 - renamed configDir to configCacheDir because the config held there is dynamic
-- add a color code or marker for items that are detected as episodes and update Legend if need be
+- added season and episode labels for items that are detected as episodes
 - added anime-style episode guessing, treating all episodes as part of season 1
 - fixed failure to match TV-style episodes introduced by anime-style episode guessing
 - added new default anime feeds: nyaa.se and tokyotosho.info (anime only)
 - removed default feed ezRSS.it because they serve gzipped torrent files, for which there is currently no support
 - improved error alert for "Error: No torrent file found on..." to clue user to possibility of gzipping
+- removed default feed ThePirateBay HiRes Shows to reduce clutter
 - modified version check to use new URL
 - added default Transmission login to default config
 - updated the Bug Report to send to this project, not TorrentWatch-X
