--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,8 @@ Functional changes
     Splitting it up also required hardcoding paths in several places due to the poor use of libraries. These will be fixed soon for sure.
 - renamed configDir to configCacheDir because the config held there is dynamic
 - added default Transmission login to default config
-- added season and episode labels for items that are detected as episodes or full seasons
+- temporarily added season and episode labels for items that are detected as episodes or full seasons
+- temporarily added video quality label
 - rewrote method of sanitizing titles to reduce errors
 - added new default anime feeds: nyaa.se and tokyotosho.info (anime only)
 - removed default feed ezRSS.it because they serve gzipped torrent files, for which there is currently no support
@@ -27,7 +28,8 @@ Code changes
 - add alt attributes to img tags
 - removed ob_end_clean(); from several functions in torrentwatch-xa.php to fix "unreachable statement" IDE warnings, but this is a temporary cleanup
 - fixed unquoted CURL-related constants in config_lib.php:get_curl_defaults()
-- replaced variable name prefix of tw_ with twxa_
+- replaced existing variable name prefix of tw_ with twxa_ (will expand use of twxa_ prefix in future)
 - used IDE source reformatting tools to clean up some files
 - started new collection of utility functions in twxa_parse_utils.php
 - removed get_item_filter(); started transition to allow user-defined Sanitize Characters string in config
+- renamed some variables and functions according to Zend naming convention
