--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,9 +16,11 @@ Functional changes
 - removed default feed ezRSS.it because they serve gzipped torrent files, for which there is currently no support
 - improved error alert for "Error: No torrent file found on..." to clue user to possibility of gzipping
 - removed default feed ThePirateBay HiRes Shows to reduce clutter
-- added ability to detect specific resolutions (like 1280x720p, 720i, 1920x1080p, 480i) as certain qualities
-- added anime-style episode guessing, treating all episodes as part of season 1
-- fixed failure to match TV-style episodes introduced by anime-style episode guessing
+- added anime-style episode guessing, treating all anime episodes as part of season 1
+    - fixed failure to match TV-style episodes introduced by anime-style episode guessing
+    - added ability to detect specific resolutions (like 1280x720p, 720i, 1920x1080p, 480i) as certain qualities
+    - rewrote resolution and quality detection
+    - rewrote Season and Episode and Date detection
 - modified version check to use new URL
 - updated the Bug Report to send to this project, not TorrentWatch-X
 Code changes
