--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ Throughout all versions
 - remove all tvDB support (currently disabled anyway, as cloned from TorrentWatch-X 0.8.9)
 - remove all NMT support (only supported OS is currently Debian 7.5)
 - clean up all the undefined variable PHP notices spewing into the web server error_log
+- revamp the overall graphic design
 
 0.1.2
 - pin the Favorites dialog so that it is easier to manage Favorites in bulk
@@ -18,7 +19,7 @@ Throughout all versions
 - fix feed section header numbers so that they match the number of rows after selected filter has been applied
 
 0.1.3
-- add debug console to web UI
+- fix debug console in web UI
 - 
 
 
