--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,12 +17,12 @@ Functional changes
 - improved error alert for "Error: No torrent file found on..." to clue user to possibility of gzipping
 - removed default feed ThePirateBay HiRes Shows to reduce clutter
 - changed favicon to new logo
+- modified version check to use new URLs
 - added anime-style episode guessing, treating all anime episodes as part of season 1
     - fixed failure to match TV-style episodes introduced by anime-style episode guessing
     - added ability to detect specific resolutions (like 1280x720p, 720i, 1920x1080p, 480i) as certain qualities
     - rewrote resolution and quality detection
     - rewrote Season and Episode and Date detection
-- modified version check to use new URL
 - updated the Bug Report to send to Github, not TorrentWatch-X
 Code changes
 - replaced some quickie php tags like <?php echo key; ?> with proper full <?php print([HTML code]) ?> in global_config.tpl, favorites.tpl, and favorites_info.tpl
